force-app/main/default/objects/ArchivedAppError__b/ArchivedAppError__b.object-meta.xml
<CustomObject>
    <label>Archived App Error</label>
    <pluralLabel>Archived App Errors</pluralLabel>
</CustomObject>