force-app/main/default/objects/ArchivedAppError__b/fields/dtm_ArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>dtm_ArchivedDate__c</fullName>
    <label>Archived Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>