force-app/main/default/objects/ArchivedAppError__b/fields/dtm_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>dtm_CreatedDate__c</fullName>
    <label>Original Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>