force-app/main/default/objects/ArchivedAppError__b/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived App Errors</relationshipLabel>
    <relationshipName>ArchivedAppErrors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>