force-app/main/default/objects/ArchivedAppError__b/fields/lkp_License__c.field-meta.xml
<CustomField>
    <fullName>lkp_License__c</fullName>
    <label>License</label>
    <referenceTo>sfLma__License__c</referenceTo>
    <relationshipLabel>Archived App Errors</relationshipLabel>
    <relationshipName>ArchivedAppErrors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>