force-app/main/default/objects/ArchivedAppError__b/fields/lkp_Package__c.field-meta.xml
<CustomField>
    <fullName>lkp_Package__c</fullName>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipLabel>Archived App Errors</relationshipLabel>
    <relationshipName>ArchivedAppErrors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>