force-app/main/default/objects/ArchivedAppError__b/fields/lkp_PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>lkp_PackageVersion__c</fullName>
    <label>Package Version</label>
    <referenceTo>sfLma__Package_Version__c</referenceTo>
    <relationshipLabel>Archived App Errors</relationshipLabel>
    <relationshipName>ArchivedAppErrors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>