force-app/main/default/objects/ArchivedAppError__b/fields/txt_ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>txt_ExceptionMessage__c</fullName>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>