force-app/main/default/objects/ArchivedAppError__b/fields/txt_MatchedWith__c.field-meta.xml
<CustomField>
    <fullName>txt_MatchedWith__c</fullName>
    <label>Matched With</label>
    <length>80</length>
    <type>Text</type>
</CustomField>