force-app/main/default/objects/ArchivedAppError__b/fields/txt_Namespace__c.field-meta.xml
<CustomField>
    <fullName>txt_Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>