force-app/main/default/objects/ArchivedAppError__b/fields/txt_OrgId__c.field-meta.xml
<CustomField>
    <fullName>txt_OrgId__c</fullName>
    <label>Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>