force-app/main/default/objects/ArchivedAppError__b/fields/txt_VisualforcePage__c.field-meta.xml
<CustomField>
    <fullName>txt_VisualforcePage__c</fullName>
    <label>Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>